cabal-version:      2.4
name:               fetch
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-all
    build-depends:    base ^>=4.16.4.0,
                      aeson >= 1.4.7.0,
                      http-conduit >= 2.3.2,
                      text >= 1.2.3.1,
                      bytestring >= 0.10.8.2,
                      http-client,
                    --   ghc-generics,
                      http-client-tls
                       

    default-language: Haskell2010
    ghc-options:      -Wall

executable fetch
    import:           common-all
    main-is:          Main.hs
    hs-source-dirs:   app
    
